crates/churl/tests/snapshots/tui_snapshot__multipart_file_picker_overlay.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐  List users ●                                    
│  ▸ orders                  │┌ URL ───────────────────────────────────────────┐
│  ▾ users                   ││GET  https://api.test/users                 ●   │
│>   List us┏ Choose file — . ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓───────────┘
│    Create ┃> orders/                                             ┃───────────┐
│    Get use┃  users/                                              ┃           │
│           ┃  churl.toml                                          ┃           │
│           ┃                                                      ┃           │
│           ┃                                                      ┃           │
│           ┃                                                      ┃           │
│           ┃                                                      ┃           │
│           ┃                                                      ┃           │
│           ┃                                                      ┃───────────┘
│           ┃                                                      ┃───────────┐
│           ┃                                                      ┃           │
│           ┃                                                      ┃           │
│           ┃                                                      ┃           │
│           ┃                                                      ┃           │
│           ┃ Enter: open/pick · -: up · Esc: cancel               ┃           │
└───────────┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛           │
┌ Sequences ─────────────────┐│                                                │
│<leader>s n to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 REQUEST · demo · ● unsaved · w save · ? help · space leader · / search · : pale
