crates/churl/tests/snapshots/tui_snapshot__options_overlay_advanced_section_when_debug_on.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snap
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ users                   │└────────────────────────────────────────────────┘
│           ┏ Options ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓───────────┐
│           ┃  Proxy             (none — uses HTTP(S)_PROXY env)   ┃           │
│           ┃  TLS verification  on                                ┃           │
│           ┃  Cookies           off                               ┃           │
│           ┃  Advanced (debug)  ↳ concurrency/total/body-cap/timeo┃           │
│           ┃                                                      ┃           │
│           ┃┌ Advanced limits (debug-gated) ─────────────────────┐┃           │
│           ┃│▸ concurrency       5                               │┃           │
│           ┃│  total             10                              │┃───────────┘
│           ┃│  body cap (bytes)  10485760                        │┃───────────┐
│           ┃│  timeout (s)       30                              │┃           │
│           ┃│                                                    │┃           │
│           ┃└────────────────────────────────────────────────────┘┃           │
│           ┃                                                      ┃           │
│           ┃ j/k move · enter edit · h back · q close             ┃           │
└───────────┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛           │
┌ Sequences ─────────────────┐│                                                │
│<leader>s n to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 debug capture ON — sends now build an inspectable trace                        
 EXPLORER · demo · DEBUG · ? help · space leader · / search · : palette
