crates/churl/tests/snapshots/tui_snapshot__options_overlay_toggle_tls.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 1558
expression: snap
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ users                   │└────────────────────────────────────────────────┘
│           ┏ Options ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓───────────┐
│           ┃  Proxy             (none — uses HTTP(S)_PROXY env)   ┃           │
│           ┃▸ TLS verification  OFF — certificates NOT verified   ┃           │
│           ┃  Cookies           off                               ┃           │
│           ┃                                                      ┃           │
│           ┃┌ Cookies ───────────────────────────────────────────┐┃           │
│           ┃│(cookie jar is off — enable it on the Cookies row)  │┃           │
│           ┃│                                                    │┃           │
│           ┃│                                                    │┃───────────┘
│           ┃│                                                    │┃───────────┐
│           ┃│                                                    │┃           │
│           ┃│                                                    │┃           │
│           ┃└────────────────────────────────────────────────────┘┃           │
│           ┃                                                      ┃           │
│           ┃ j/k move · enter edit/toggle · l cookies · q close   ┃           │
└───────────┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛           │
┌ Sequences ─────────────────┐│                                                │
│<leader>s n to add          ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 ⚠ TLS verification OFF — certificates not checked                              
 EXPLORER · demo · ⚠ TLS OFF · ? help · space leader · / search · : palette
