crates/churl/tests/snapshots/tui_snapshot__palette_lists_curated_commands.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ users                   │└────────────────────────────────────────────────┘
│                            │┌ Request ───────────────────────────────────────┐
│                            ││                                                │
│              ┏ Commands ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓              │
│              ┃> █                                             ┃              │
│              ┃> send request                                  ┃              │
│              ┃  cancel request                                ┃              │
│              ┃  save request                                  ┃              │
│              ┃  new endpoint                                  ┃              │
│              ┃  new collection                                ┃              │
│              ┃  rename                                        ┃──────────────┘
│              ┃  delete                                        ┃──────────────┐
│              ┃  switch profile                                ┃              │
│              ┃  toggle response headers view                  ┃              │
│              ┃  toggle response wrap                          ┃              │
│              ┃  focus explorer                                ┃              │
│              ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛              │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
