crates/churl/tests/snapshots/tui_snapshot__palette_overlay.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 115
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│> ▸ orders                  ││no endpoint selected                            │
│  ▸ users                   │└────────────────────────────────────────────────┘
│                            │┌ Request ───────────────────────────────────────┐
│                            ││                                                │
│              ┏ Commands ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓              │
│              ┃> █                                             ┃              │
│              ┃> send request                                  ┃              │
│              ┃  cancel request                                ┃              │
│              ┃  save request                                  ┃              │
│              ┃  new endpoint                                  ┃              │
│              ┃  new collection                                ┃              │
│              ┃  rename                                        ┃──────────────┘
│              ┃  delete                                        ┃──────────────┐
│              ┃  switch profile                                ┃              │
│              ┃  focus explorer                                ┃              │
│              ┃  focus URL bar                                 ┃              │
│              ┃  focus request                                 ┃              │
│              ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛              │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 EXPLORER · demo · ? help · space leader · / search · : palette
