crates/churl/tests/snapshots/tui_snapshot__placeholder_screen_snapshot.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: screen
---
╭─────────────────────────────────── churl ────────────────────────────────────╮
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                     churl                                    │
│                                                                              │
│                                press q to quit                               │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                              │
│                                                                         0.1.0│
╰──────────────────────────────────────────────────────────────────────────────╯
