crates/churl/tests/snapshots/tui_snapshot__request_pane_auth_line_masks_literal_secret.snap
---
source: crates/churl/tests/tui_snapshot.rs
assertion_line: 190
expression: rendered
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│  ▾ private                 ││GET  https://api.test/things        auth:apikey │
│>   List things             │└────────────────────────────────────────────────┘
│                            │┏ Request ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│                            │┃ Params(0)   Headers(0)   Auth(1)   Body        ┃
│                            │┃> kind: ApiKey  (enter to change)               ┃
│                            │┃  name: X-Api-Key                               ┃
│                            │┃  value: *****                                  ┃
│                            │┃  placement: header  (space/enter to toggle)    ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
│                            │┌ Response ──────────────────────────────────────┐
│                            ││no response yet                                 │
│                            ││GET https://api.test/things                     │
│                            ││                                                │
│                            ││press ctrl-s to send                            │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 REQUEST · demo · ? help · space leader · / search · : palette
