crates/churl/tests/snapshots/tui_snapshot__request_pane_auth_line_placeholder_shown_verbatim.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│  ▾ private                 ││GET  https://api.test/report  auth:basic  {{1}} │
│>   Private report          │└────────────────────────────────────────────────┘
│                            │┏ Request ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│                            │┃ [1] Params(0)   [2] Headers(0)   [3] Auth(1)   ┃
│                            │┃> kind: Basic  (enter to change)                ┃
│                            │┃  username: alice                               ┃
│                            │┃  password: {{password}}                        ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
│                            │┌ Response ──────────────────────────────────────┐
│                            ││no response yet                                 │
│                            ││GET https://api.test/report                     │
│                            ││                                                │
│                            ││press ctrl-s to send                            │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 REQUEST · demo · ? help · space leader · / search · : palette
