crates/churl/tests/snapshots/tui_snapshot__request_tab_body.snap
---
source: crates/churl/tests/tui_snapshot.rs
expression: snapshot(&mut app)
---
┌ Explorer ──────────────────┐┌ URL ───────────────────────────────────────────┐
│  ▸ orders                  ││POST  https://api.test/users                    │
│  ▾ users                   │└────────────────────────────────────────────────┘
│    List users              │┏ Request ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓
│>   Create user             │┃ Params(0)   Headers(1)   Auth   Body           ┃
│    Get user                │┃{"name": "Ada"}                                 ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃                                                ┃
│                            │┃  Normal                                        ┃
│                            │┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛
│                            │┌ Response ──────────────────────────────────────┐
│                            ││no response yet                                 │
│                            ││POST https://api.test/users                     │
│                            ││                                                │
│                            ││press ctrl-s to send                            │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
│                            ││                                                │
└────────────────────────────┘└────────────────────────────────────────────────┘
 REQUEST · demo · j/k move · enter select · ctrl-s send · w save · f jump · / se
